[tool.poetry]
name = "repalette"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
torchvision = "^0.8.1"
pytorch-lightning = "^1.0.8"
tqdm = "^4.54.1"
scikit-learn = "^0.23.2"
scikit-image = "^0.17.2"
requests = "^2.25.0"
SQLAlchemy = "^1.3.20"
beautifulsoup4 = "^4.9.3"
python-dotenv = "^0.15.0"
s3fs = "0.4"
boto3 = "^1.16.35"
mysqlclient = "^2.0.2"
optuna = "^2.3.0"
discord = "^1.0.1"
nest-asyncio = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
ipywidgets = "^7.5.1"
setuptools = "^50.3.2"
awscli = "^1.18.196"
cosmos-wfm = "^2.13.11"
pre-commit = "^2.9.3"
jupyterlab = "^2.2.0"
jupyter-core = "^4.7.0"
jupyter-client = "^6.1.11"
flake8 = "^3.8.4"
autoflake = "^1.4"
mypy = "^0.790"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | documents
  | notebooks
  )/
'''
